# foundry-agentic-workshop

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .npmrc  AGENTS.md  CONTRIBUTING.md  README.md  agency.toml  azure.yaml  package.json  pnpm-lock.yaml  pyproject.toml  save_screenshot.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-fix.yml  lab-improvement.yml  new-lab.yml  new-module.yml  question.yml
.github/instructions/: accessibility.instructions.md  lab-module-frontmatter.instructions.md  lab-module-readme.instructions.md  logging-security.instructions.md  markdown.instructions.md  python-mcp-server.instructions.md
.github/prompts/: test-attendee-guide.prompt.md  test-individual-guide.prompt.md  test-lab-agent-framework-dotnet-module.prompt.md  test-lab-introduction-foundry-agent-service-module-01.prompt.md  test-lab-introduction-foundry-agent-service-module-02.prompt.md  test-lab-introduction-foundry-agent-service-module-03.prompt.md  test-lab-introduction-foundry-agent-service-module-04.prompt.md  test-lab-introduction-foundry-agent-service-module-05.prompt.md  test-lab-introduction-foundry-agent-service-module-06.prompt.md  test-lab-introduction-foundry-agent-service-module-07.prompt.md  test-lab-introduction-foundry-agent-service-module-08.prompt.md  test-lab-introduction-foundry-agent-service-module-09.prompt.md  test-lab-introduction-foundry-agent-service-module-10.prompt.md  (+3 more)
docs/: guide-attendee.md  guide-facilitator.md  guide-individual.md  guide-organizer.md  guide-proctor.md  index.md  quickstart-attendee.md  quickstart-facilitator.md  quickstart-individual.md  quickstart-learner.md  quickstart-organizer-github-copilot.md  quickstart-organizer.md
infra/: main.bicep  main.bicepparam  main.json  main.tf  model-deployments.default.json  model-deployments.json  model-deployments.minimal.json  model-deployments.workshop.json
scripts/: assign-attendee-roles.py  check-model-quota.py  configure-workshop.py  delete-attendee-portal.py  deploy-attendee-portal.py  deploy-blob-relay-mcp-server.py  deploy-flight-ops-mcp-server.py  deploy-mcp-server.py  deploy-retail-remedy-ops-mcp-server.py  generate-attendee-onboarding.py  generate-vitepress-labs.mjs  health-check.py  list-attendee-projects.py  prepare-attendee-roles.py  provision-agent-identity-demo.py  seed-document-index.py  seed-passenger-rights-index.py  seed-product-index.py  show-model-quota.py  validate-lab-frontmatter.mjs
shared/: .env.example  health_check.py  requirements.txt  utils.py
(+216 files in other folders)
