[project]
name = "foundry-agentic-workshop"
version = "0.1.0"
description = "Microsoft Foundry Agentic Workshop - shared Python runtime dependencies."
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Foundry Agentic Workshop Maintainers" }]
dependencies = [
    "agent-framework-foundry",
    "agent-framework-foundry-hosting",
    "azure-ai-projects>=2.3.0",
    "azure-identity",
    "azure-mgmt-authorization",
    "azure-search-documents",
    "azure-storage-blob",
    "mcp",
    "python-dotenv",
    "requests",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=2.2.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.21",
]

[tool.uv]
# Prefer uv-managed Python so build virtualenvs (needed for sdist packages like
# agent-framework-core) are created from a real executable rather than the
# Windows App Store stub, which cannot be copied and causes os error 1920.
python-preference = "managed"
# agent-framework transitively requires pre-release versions of
# agent-framework-azure-ai-search and azure-search-documents.
prerelease = "allow"

[tool.pytest.ini_options]
# importlib mode avoids sys.modules collisions between MCP servers that
# each have a server.py with the same bare module name.
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
